PipeWire camera: backport upstream mmap() fixes
Categories
(Core :: WebRTC: Audio/Video, defect)
Tracking
()
People
(Reporter: jgrulich, Assigned: jgrulich)
Details
Attachments
(2 files)
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
There are two recent upstream fixes for how we mmap() PipeWire buffers to properly use offset and change in use of MAP_SHARED instead of MAP_PRIVATE to fix some dmabuf types that are not working when libcamera is used.
Fixes:
https://webrtc-review.googlesource.com/c/src/+/354521
https://webrtc-review.googlesource.com/c/src/+/354623
| Assignee | ||
Comment 1•1 year ago
|
||
This is a simple backport of an WebRTC upstream change.
Upstream commit: 3252f5d8e481b65571ebb95801754a10dc910632
Updated•1 year ago
|
| Assignee | ||
Comment 2•1 year ago
|
||
This is a simple backport of an WebRTC upstream change.
Upstream commit: 025d69b4d0df05f54d7bfcb3a4a2b35b48b83d82
Comment 4•1 year ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/bfd83b291139
https://hg.mozilla.org/mozilla-central/rev/09f0b8ff3d06
| Assignee | ||
Comment 5•1 year ago
|
||
Comment on attachment 9407477 [details]
Bug 1902618 - WebRTC backport: PipeWire video capture: mmap() PipeWire buffers with MAP_SHARED r=pehrsons
Beta/Release Uplift Approval Request
- User impact if declined: This is a set of simple WebRTC backports allowing to use PipeWire camera with libcamera software ISP. This is needed for laptops with Snapdragon chips. There is no risk backporting these patches, they are simple and straightforward and also PipeWire camera is not enabled by default in Firefox. Since the next Firefox 128 is an ESR release, we think it makes sense to include these fixes.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Simple fix changing a parameter in a mmap() call from MAP_PRIVATE to MAP_SHARED. This is not a risky change since we just mmap() the memory with read-only anyway. This fixes access to some dmabuf types.
- String changes made/needed:
- Is Android affected?: No
Comment 6•1 year ago
|
||
Comment on attachment 9407476 [details]
Bug 1902618 - WebRTC backport: PipeWire capture: fix mmap arguments r=pehrsons
Approved for 128.0b5.
Updated•1 year ago
|
Updated•1 year ago
|
Description
•