Bug 1902618 - WebRTC backport: PipeWire capture: fix mmap arguments r=pehrsons,webrtc-reviewers a=RyanVM

This is a simple backport of an WebRTC upstream change.

Upstream commit: 3252f5d8e481b65571ebb95801754a10dc910632

Differential Revision: https://phabricator.services.mozilla.com/D213751