third_party/libwebrtc/modules/video_capture/linux/video_capture_pipewire.cc
@@ -418,11 +418,10 @@ void VideoCaptureModulePipeWire::ProcessBuffers() {
       ScopedBuf frame;
       frame.initialize(
           static_cast<uint8_t*>(
-              mmap(nullptr,
-                   spaBuffer->datas[0].maxsize + spaBuffer->datas[0].mapoffset,
-                   PROT_READ, MAP_PRIVATE, spaBuffer->datas[0].fd, 0)),
-          spaBuffer->datas[0].maxsize + spaBuffer->datas[0].mapoffset,
-          spaBuffer->datas[0].fd, spaBuffer->datas[0].type == SPA_DATA_DmaBuf);
+              mmap(nullptr, spaBuffer->datas[0].maxsize, PROT_READ, MAP_PRIVATE,
+                   spaBuffer->datas[0].fd, spaBuffer->datas[0].mapoffset)),
+          spaBuffer->datas[0].maxsize, spaBuffer->datas[0].fd,
+          spaBuffer->datas[0].type == SPA_DATA_DmaBuf);
 
       if (!frame) {
         RTC_LOG(LS_ERROR) << "Failed to mmap the memory: "
